# openmpf

./: .gitignore  .gitmodules  .travis.yml  LICENSE  NOTICE  README.md  logging-dependencies.xml  pom.xml
mpf_components/CPP/: CMakeLists.txt  pom.xml
mpf_components/CPP/componentInterface/include/: MPFComponentInterface.h
mpf_components/CPP/detection/: CMakeLists.tpl
mpf_components/CPP/detection/detectionComponentAPI/include/: MPFImageReader.h  MPFInvalidPropertyException.h  MPFVideoCapture.h  VideoSegmentToFramesConverter.h  detectionComponentUtils.h  detection_base.h
mpf_components/CPP/detection/detectionComponentAPI/src/: CMakeLists.txt  MPFImageReader.cpp  MPFInvalidPropertyException.cpp  MPFVideoCapture.cpp  detectionComponentUtils.cpp
mpf_components/CPP/detection/detectionTestUtils/include/: detection_comparison.h  image_generation.h  read_detections_from_file.h  video_generation.h  write_detections_to_file.h
mpf_components/CPP/detection/detectionTestUtils/src/: CMakeLists.txt  detection_comparison.cpp  image_generation.cpp  read_detections_from_file.cpp  video_generation.cpp  write_detections_to_file.cpp
mpf_components/CPP/detection/detectionUtils/include/: MPFSimpleConfigLoader.h  detection_utils.h  utils.h
mpf_components/CPP/detection/detectionUtils/src/: CMakeLists.txt  detection_utils.cpp  utils.cpp
mpf_components/CPP/detection/hello/: CMakeLists.txt  descriptor.json  helloWorld.cpp  helloWorld.h  main.cpp
mpf_components/CPP/gtest-1.7.0/: pom.xml
mpf_components/CPP/scripts/: FindCppComponents.pl
mpf_components/CPP/scripts/MPF/: Utils.pm
trunk/: CMakeLists.txt  pom.xml
trunk/ansible/: install-mpf.sh
trunk/ansible/install/: configure-cluster.sh  install-manager.sh  push-configuration.sh  run-install.py
trunk/ansible/install/ansible/: mpf-bootstrap.yml  mpf-child.yml  mpf-cleanup.yml  mpf-master.yml  mpf-pwcfg.yml  mpf-repo.yml  mpf-site.yml  mpf-upgrade.yml  update-all-mpf-nodes.yml
trunk/audio-video-utils/: pom.xml
trunk/cmake/: dependent_libraries_lists.cmake
trunk/cpp-executors-common/: AmqMessageType.h  BasicMessenger.cpp  BasicMessenger.h  CMakeLists.txt  ComponentLoadError.h  ExecutorUtil.cpp  ExecutorUtil.h  ExitSignalBlocker.cpp  ExitSignalBlocker.h  ILogger.h  LoggerWrapper.cpp  LoggerWrapper.h  PythonBase.cpp  PythonBase.h  PythonLogger.cpp  PythonLogger.h  PythonScopedSignalHandler.cpp  PythonScopedSignalHandler.h  PythonUtil.cpp  PythonUtil.h  QuitReceived.h  Shutdown.cpp  Shutdown.h  Visibility.h
trunk/detection/: CMakeLists.txt
trunk/detection/common/: CMakeLists.txt
trunk/detection/common/amq/: CMakeLists.txt  MPFDetectionBuffer.cpp  MPFDetectionBuffer.h  MPFMessenger.cpp  main.cpp
trunk/detection/executor/cpp/: CMakeLists.txt  MPFDetectionBuffer.cpp  MPFDetectionBuffer.h  MPFMessenger.h  main.cpp
trunk/detection/executor/cpp/batch/: BatchExecutorUtil.cpp  BatchExecutorUtil.h  CMakeLists.txt  ComponentLoadError.h  ComponentRegistration.cpp  ComponentRegistration.h  CppComponentHandle.cpp  CppComponentHandle.h  HealthCheck.cpp  HealthCheck.h  JobContext.cpp  JobContext.h  JobReceiver.cpp  JobReceiver.h  LazyLoggerWrapper.h  Log4cxxConfig.xml  LoggerWrapper.cpp  LoggerWrapper.h  MPFDetectionBuffer.cpp  MPFDetectionBuffer.h  MPFMessenger.cpp  MPFMessenger.h  Messenger.cpp  Messenger.h  ProtobufRequestUtil.cpp  ProtobufRequestUtil.h  ProtobufResponseUtil.cpp  ProtobufResponseUtil.h  PythonComponentHandle.cpp  PythonComponentHandle.h  SignalWatcher.cpp  SignalWatcher.h  main.cpp
trunk/detection/executor/cpp/cli-runner/: CMakeLists.txt  MpfCppSdkPythonBindings.cpp
trunk/detection/executor/cpp/common/: MPFMessageUtils.cpp  MPFMessageUtils.h
trunk/detection/executor/cpp/streaming/: BasicAmqMessageSender.cpp  BasicAmqMessageSender.h  CMakeLists.txt  ExecutorErrors.cpp  ExecutorErrors.h  (+19 more)
trunk/detection/executor/java/: pom.xml
trunk/detection/test-components/cpp/: CMakeLists.txt  ComponentSetup.cmake
trunk/detection/test-components/java/: pom.xml
trunk/interop/: README.md  pom.xml
trunk/java-hello-world/: pom.xml
trunk/jenkins/scripts/: 1-EnvironmentClean.pl  2-EnvironmentRun.pl  3-BuildAndInstallMpf.pl  A-RunGTests.pl  C-Teardown.pl  CreateCustomPackage.pl  D-PackageRPMS.pl  PackageRPMS.pl
trunk/jenkins/scripts/MPF/: Jenkins.pm
trunk/jenkins/scripts/config_files/: mpf-open-source-package.json  openmpf-non-docker-components-package.json  openmpf-open-source-package.json
trunk/markup/: pom.xml
trunk/mpf-install/: base-pom.xml  node-manager-only-pom.xml  pom.xml
trunk/mpf-password-generator/: README.md  pom.xml
trunk/mpf-rest-api/: pom.xml
trunk/mpf-rest-client/: README.md  pom.xml
trunk/mpf-rest-client/lib/: NOTICE
trunk/mpf-system-tests/: pom.xml
trunk/node-manager/: pom.xml
trunk/node-manager/src/scripts/: handle-err.sh  log4bash.sh  node-manager  node-manager.service  postinstall.sh  preinstall.sh  preremove.sh  start-java-component.sh  start-nodemanager.sh  start-service-java.sh  symlink.sh
trunk/protobuf/: CMakeLists.txt  pom.xml
trunk/subject-tracking/executor/: CMakeLists.txt
trunk/subject-tracking/executor/cpp/: CMakeLists.txt  ComponentExecutor.cpp  ComponentExecutor.h  ComponentRegistration.cpp  ComponentRegistration.h  ExecutorConfig.cpp  ExecutorConfig.h  JobContext.h  JobReceiver.cpp  JobReceiver.h  PythonComponent.cpp  PythonComponent.h  main.cpp
trunk/subject-tracking/executor/python/: __main__.py  requirements.txt
trunk/travis/: install-protobuf.sh
trunk/travis/scripts/: install-activemqcpp.sh  install-apr-util.sh  install-apr.sh  install-cmake.sh  install-deps.sh  install-opencv.sh  install-protobuf.sh  update-cmake.sh  update-gcc.sh
trunk/video-overlay/: CMakeLists.txt  pom.xml
trunk/workflow-manager/: pom.xml
trunk/workflow-manager/MPF_HOME/data/: Actions.xml  Tasks.xml
trunk/workflow-manager/overlays/: org.atmosphere.client.javascript-2.2.12.info
trunk/workflow-manager/src/scripts/: post-integration-test-kahadb.sh  postinstall.sh  preinstall.sh  preremove.sh  xvfb-start.sh  xvfb-stop.sh
trunk/workflow-manager/src/test/: README.md  package.json
(+1595 files in other folders)
